--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -66,10 +66,10 @@
         <div class="cell">
           <li>
             <a href="#">
-              <img>
-              <strong>촉촉하고 향기롭게 바디 미스트</strong>
-              <span>간편하게 뿌리기 좋아요</span>
-              <span>테마</span>
+              <img class="cell__lowehalf_pic" src="/images/test.png">
+              <span class="cell__product_name">촉촉하고 향기롭게 바디 미스트</span>
+              <span class="cell__explanation">간편하게 뿌리기 좋아요</span>
+              <span class="cell__icon"></span>
             </a>
           </li>
         </div>
@@ -114,10 +114,17 @@
           </li>
         </div>
         <div class="cell">
-          <button class="btn-more-info">더보기(1 / n건)</button>
+          <button class="btn_more_info">더보기(1 / n건)</button>
         </div>
       </div>
-    
+    <section class="hot_category">
+      <div>
+        지금 뜨는 테마 카테고리
+      </div>
+      <div>
+
+      </div>
+    </section>
 
   </body>
 </html>
