--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -53,28 +53,28 @@ header {
       width: 119px;
       height: auto;
       vertical-align: top; }
-    header .header__top .searchbox {
-      position: relative;
-      float: right;
-      border: 1px solid #cecfd1;
-      width: 670px;
-      height: 54px;
-      padding: 16px 60px 14px 30px;
-      margin: 0 24px 0 30px;
-      border-radius: 10px;
-      background-color: #fff; }
-      header .header__top .searchbox button {
-        font-size: 12px;
-        line-height: 1.5;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 52px;
-        height: 52px;
-        background-color: transparent;
-        cursor: pointer;
-        vertical-align: middle;
-        border: 0; }
+  header .searchbox {
+    position: relative;
+    float: right;
+    border: 1px solid #cecfd1;
+    width: 670px;
+    height: 54px;
+    padding: 16px 60px 14px 30px;
+    margin: 0 24px 0 30px;
+    border-radius: 10px;
+    background-color: #fff; }
+    header .searchbox button {
+      font-size: 12px;
+      line-height: 1.5;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 52px;
+      height: 52px;
+      background-color: transparent;
+      cursor: pointer;
+      vertical-align: middle;
+      border: 0; }
   header .nav-container {
     margin-top: 40px;
     border-top: 1px solid #efefef;
@@ -95,65 +95,72 @@ header {
         header .nav-container div ul li:hover {
           transition: background-color 0.4s;
           color: #f9624c; }
-      header .nav-container div .nav_first,
-      header .nav-container div .nav_middle {
-        float: left; }
       header .nav-container div:first-child {
         display: block;
         height: 56px;
         font-weight: 700;
         font-size: 16px; }
-        header .nav-container div:first-child .nav_first__button {
-          cursor: pointer;
-          display: inline-block;
-          float: left; }
-          header .nav-container div:first-child .nav_first__button .category {
-            background-color: transparent;
-            border: 0;
-            border-radius: 0;
-            width: 100px;
-            position: relative; }
-        header .nav-container div:first-child .tab_bold {
-          cursor: pointer;
-          padding: 0 19px;
-          float: left; }
-        header .nav-container div:first-child .special_sale::after {
-          content: "";
-          position: absolute;
-          top: 0px;
-          width: 5px;
-          right: 10px;
-          height: 5px;
-          background-color: #f9624c;
-          border-radius: 10px; }
       header .nav-container div li {
         display: inline-block;
         position: relative;
         letter-spacing: -0.04em;
         color: #000;
         text-align: left; }
-        header .nav-container div li .tab_light {
-          cursor: pointer;
-          float: left;
-          padding: 0 14px;
-          color: #888; }
-      header .nav-container div .txt_bar {
-        width: 1px;
-        height: 18px;
-        background-color: #e3e3e3;
-        display: inline-block;
-        float: left;
-        margin: 0 12px; }
-      header .nav-container div .nav_last {
-        display: inline-block;
-        font-weight: 500;
-        font-size: 16px;
-        float: right; }
-        header .nav-container div .nav_last li {
-          display: inline-block;
-          position: relative;
-          float: left;
-          padding-left: 30px; }
+
+.nav_first,
+.nav_middle {
+  float: left; }
+
+.nav_first__button {
+  cursor: pointer;
+  display: inline-block;
+  float: left; }
+  .nav_first__button .category {
+    background-color: transparent;
+    border: 0;
+    border-radius: 0;
+    width: 100px;
+    position: relative; }
+
+.txt_bar {
+  width: 1px;
+  height: 18px;
+  background-color: #e3e3e3;
+  display: inline-block;
+  float: left;
+  margin: 0 12px; }
+
+.nav_last {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 16px;
+  float: right; }
+  .nav_last li {
+    display: inline-block;
+    position: relative;
+    float: left;
+    padding-left: 30px; }
+
+.tab_bold {
+  cursor: pointer;
+  padding: 0 19px;
+  float: left; }
+
+.special_sale::after {
+  content: "";
+  position: absolute;
+  top: 0px;
+  width: 5px;
+  right: 10px;
+  height: 5px;
+  background-color: #f9624c;
+  border-radius: 10px; }
+
+.tab_light {
+  cursor: pointer;
+  float: left;
+  padding: 0 14px;
+  color: #888; }
 
 .search-icon {
   display: block;
@@ -247,6 +254,9 @@ header {
   background-color: #f3f3f3;
   position: relative; }
 
+/*-------------------------------*/
+/*MAIN SECTION*/
+/*-------------------------------*/
 .grid_container {
   width: 1276px;
   margin: 0.7rem 10.5rem 0 10.5rem;
@@ -255,16 +265,6 @@ header {
   grid-template-rows: repeat(3, 340px, 276px, 73px);
   grid-template-columns: repeat(5, 1fr);
   border: 1px solid #dddcdc; }
-  .grid_container .cell {
-    border: 1px solid #f1f1f1;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    position: relative;
-    height: 276px;
-    background-size: cover; }
   .grid_container .cell:nth-child(1) {
     grid-column: 1 / 3;
     height: 340px; }
@@ -277,6 +277,8 @@ header {
   .grid_container li {
     padding: 21px 27px;
     height: 276px;
+    width: 100%;
+    height: 100%;
     text-align: left;
     border-bottom: 0 none;
     position: relative;
@@ -285,8 +287,50 @@ header {
     background-size: cover; }
     .grid_container li img {
       width: 100%; }
+    .grid_container li span {
+      display: block; }
 
-.btn-more-info {
+.cell {
+  border: 1px solid #f1f1f1;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+  height: 310px;
+  background-size: cover; }
+  .cell .cell__lowehalf_pic {
+    display: inline-block;
+    border: 0;
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    aspect-ratio: auto 200 / 200; }
+  .cell .cell__product_name {
+    color: #333;
+    font-weight: 700;
+    font-size: 14px;
+    white-space: nowrap;
+    text-overflow: ellipsis; }
+  .cell .cell__explanation {
+    color: #888;
+    line-height: 2; }
+  .cell .cell__icon {
+    cursor: pointer;
+    line-height: 14px;
+    display: block;
+    overflow: hidden;
+    text-indent: -9999px;
+    margin: 11px 4px 0 0;
+    float: left;
+    height: 18px;
+    width: 31px;
+    background-position: 0 -850px;
+    background-image: url("/images/icon_theme.png");
+    background-repeat: no-repeat; }
+
+.btn_more_info {
   height: 100%;
   width: 100%;
   border: none;
