[기능구현] image hover 기능 추가

--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -57,6 +57,15 @@ fieldset {
   text-indent: -9999px;
 }
 
+.link--product:hover {
+  img {
+    opacity: 0.75;
+  }
+  strong {
+    text-decoration: underline;
+  }
+}
+
 header {
   padding-top: 43px;
   min-width: 977px;
