[DOCS]Add main_section silder img

--- a/shopping/public/stylesheets/main/main.css
+++ b/shopping/public/stylesheets/main/main.css
@@ -25,6 +25,16 @@
     float: right;
     width: 485px;
     height: 340px; }
+    .main__banner__top .banner__right .banner__slider {
+      position: relative;
+      top: 0px;
+      left: -484px;
+      width: 1452px; }
+      .main__banner__top .banner__right .banner__slider .panel {
+        height: 100%;
+        overflow: hidden;
+        display: inline-block;
+        width: 484px; }
 
 .banner__right__btns {
   position: absolute;
