--- a/shopping/public/stylesheets/sass/components/componet.sass
+++ b/shopping/public/stylesheets/sass/components/componet.sass
@@ -1,5 +1,9 @@
 $--list-border: 1px solid rgba(0, 0, 0,0.05)
-
+.layer1
+    z-index: 1
+.layer2
+    z-index: -1
+  
 .icon
     background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
     background-size: 130px 90px
@@ -30,6 +34,7 @@ $--list-border: 1px solid rgba(0, 0, 0,0.05)
     float: left
     overflow: hidden
     width: 1275px
+    background-color: #fff
 .shoppinglist
     float: left
     width: 200px
