--- a/shopping/public/stylesheets/sass/main/main.sass
+++ b/shopping/public/stylesheets/sass/main/main.sass
@@ -25,6 +25,17 @@
         float: right
         width: 485px
         height: 340px
+        .banner__slider
+            position: relative
+            top: 0px
+            left: -484px
+            width: 1452px
+
+            .panel
+                height: 100%
+                overflow: hidden
+                display: inline-block
+                width: 484px
 
 .banner__right__btns
     position: absolute
