--- a/shopping/public/stylesheets/components/componet.css
+++ b/shopping/public/stylesheets/components/componet.css
@@ -1,3 +1,9 @@
+.layer1 {
+  z-index: 1; }
+
+.layer2 {
+  z-index: -1; }
+
 .icon {
   background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
   background-size: 130px 90px;
@@ -27,7 +33,8 @@
 .shoppinglists {
   float: left;
   overflow: hidden;
-  width: 1275px; }
+  width: 1275px;
+  background-color: #fff; }
 
 .shoppinglist {
   float: left;
