--- a/shopping_how/public/stylesheets/main.scss
+++ b/shopping_how/public/stylesheets/main.scss
@@ -194,6 +194,7 @@ header {
     border-radius: 0;
     width: 100px;
     position: relative;
+    cursor: pointer;
   }
 }
 
@@ -417,4 +418,40 @@ header {
   border-bottom: 4px solid #f1f1f1;
   background-color: #dedada;
   cursor: pointer;
+}
+
+/*-------------------------------*/
+/*HOT CATEGORY SECTION*/
+/*-------------------------------*/
+
+.hot_category {
+  height: 0.5rem;
+  margin: 0rem 10.5rem;
+  width: 1276px;
+
+  .hot_category__title {
+    height: 73px;
+    display: flex;
+
+    h2 {
+      align-self: flex-end;
+      font-size: 0.8rem;
+    }
+  }
+
+  .carousel_container {
+    border: 1px solid #dddcdc;
+    background-color: #fff;
+    height: 310px;
+    margin-bottom: 1rem;
+  }
+}
+
+/*-------------------------------*/
+/*FOOTER*/
+/*-------------------------------*/
+
+.footer {
+  height: 73px;
+  width: 1276px;
 }
