--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -120,7 +120,8 @@ header {
     border: 0;
     border-radius: 0;
     width: 100px;
-    position: relative; }
+    position: relative;
+    cursor: pointer; }
 
 .txt_bar {
   width: 1px;
@@ -339,3 +340,29 @@ header {
   border-bottom: 4px solid #f1f1f1;
   background-color: #dedada;
   cursor: pointer; }
+
+/*-------------------------------*/
+/*HOT CATEGORY SECTION*/
+/*-------------------------------*/
+.hot_category {
+  height: 0.5rem;
+  margin: 0rem 10.5rem;
+  width: 1276px; }
+  .hot_category .hot_category__title {
+    height: 73px;
+    display: flex; }
+    .hot_category .hot_category__title h2 {
+      align-self: flex-end;
+      font-size: 0.8rem; }
+  .hot_category .carousel_container {
+    border: 1px solid #dddcdc;
+    background-color: #fff;
+    height: 310px;
+    margin-bottom: 1rem; }
+
+/*-------------------------------*/
+/*FOOTER*/
+/*-------------------------------*/
+.footer {
+  height: 73px;
+  width: 1276px; }
