--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -117,14 +117,15 @@
           <button class="btn_more_info">더보기(1 / n건)</button>
         </div>
       </div>
-    <section class="hot_category">
-      <div>
-        지금 뜨는 테마 카테고리
-      </div>
-      <div>
-
-      </div>
     </section>
+    <section class="hot_category">
+      <div class="hot_category__title">
+        <h2>지금 뜨는 테마 카테고리<h2>
+      </div>
+      <div class="carousel_container">
 
+      </div>
+      <div class="footer"></div>
+    </section>
   </body>
 </html>
