[FIX]Fix floating bug

--- a/shopping/public/stylesheets/sass/main/main.sass
+++ b/shopping/public/stylesheets/sass/main/main.sass
@@ -26,6 +26,8 @@
         width: 485px
         height: 340px
         .banner__slider
+
+            display: flex
             position: relative
             top: 0px
             left: -484px
@@ -33,8 +35,6 @@
 
             .panel
                 height: 100%
-                overflow: hidden
-                display: inline-block
                 width: 484px
 
 .banner__right__btns
