--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -182,14 +182,13 @@ header {
     width: 485px;
     height: 340px; }
     .main__banner__top .banner__right .banner__slider {
+      display: flex;
       position: relative;
       top: 0px;
       left: -484px;
       width: 1452px; }
       .main__banner__top .banner__right .banner__slider .panel {
         height: 100%;
-        overflow: hidden;
-        display: inline-block;
         width: 484px; }
 
 .banner__right__btns {
