--- a/shopping/public/stylesheets/main/articleTop.scss
+++ b/shopping/public/stylesheets/main/articleTop.scss
@@ -138,15 +138,15 @@
       }
     }
 
-    .btn_g {
-      //   background-color: wheat;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: rgba(0, 0, 0, 0.5);
-      color: white;
-      padding: 2em;
-    }
+    // .btn_g {
+    //   //   background-color: wheat;
+    //   position: absolute;
+    //   top: 50%;
+    //   transform: translateY(-50%);
+    //   background-color: rgba(0, 0, 0, 0.5);
+    //   color: white;
+    //   padding: 2em;
+    // }
 
     .btn_prev {
       left: 0;
