--- a/views/index.html
+++ b/views/index.html
@@ -77,9 +77,20 @@
                             <img src="https://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
                                 alt="">
                         </div>
-                        <div class="top_slide">
-                            <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD"
-                                alt="">
+                        <div class="slider">
+                            <div class="carousel_slide">
+                                <img class="items" id="lastClone"
+                                    src="https://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD">
+                                <img class="items"
+                                    src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs">
+                                <img class="items" id="firstClone"
+                                    src="https://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj">
+                            </div>
+                            <div>
+                                <button class="left"><div class="left_button"></div></button>
+                                <button class="right"><div class="right_button"></div></button>
+                                <span></span>
+                            </div>
                         </div>
                     </div>
                     <div></div>
@@ -371,6 +382,8 @@
             </div>
         </div>
     </middle>
+
+    <script src="button.js"></script>
 </body>
 
 </html>
