--- a/views/index_middle.scss
+++ b/views/index_middle.scss
@@ -18,18 +18,69 @@
 
 .top_content {
     display: flex;
+    box-sizing: border-box;
     background-color: white;
 
     .best100 {
-        width:510px;
+        width:509px;
         height:340px;
     }
 
-    .top_slide {
-        border-left: 1px solid #cdcdcd;
-        width: 770px;
-        height:340px;
+    .carousel_slide {
+        display: flex;
+        width: 485px;
+        overflow: hidden;
+        img {
+            width: 485px;
+            height: 340px; 
+        }
     }
+    
+    .slider {
+        position:relative;
+        width:770px;
+        border-left: 1px solid #cdcdcd;;
+
+        .button{
+            position: absolute;
+            top:35%;
+            width: 63px;
+            height: 85px;
+            background-color: transparent;
+            outline: none;
+            border: none;
+            // background-color: red;
+            text-align: -webkit-center;
+            cursor: pointer;
+            &:active {
+                transform: translateY(2px);
+            }
+        }
+
+        .left {
+            @extend .button;
+            left:50px;
+ 
+            .left_button {
+                width: 23px;
+                height: 45px;
+                background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+                background-position: 0 0;
+                }
+            }        
+        }
+
+        .right {
+            @extend .button;
+            right: 50px;
+
+            .right_button {
+                width: 23px;
+                height: 45px;
+                background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+                background-position: -30px 0;
+            }
+        }
 }
 
 .top_imglist {
