[FEAT]Add slider motion

--- a/shopping/views/index.ejs
+++ b/shopping/views/index.ejs
@@ -76,13 +76,13 @@
             <button class="icon_slide prev"></button>
             <span class="inner_paging">
               <span>
-                <div class="num_page selected">1</div>
+                <div class="num_page selected">0</div>
+              </span>
+              <span>
+                <div class="num_page unselected">1</div>
               </span>
               <span>
                 <div class="num_page unselected">2</div>
-              </span>
-              <span>
-                <div class="num_page unselected">3</div>
               </span>
           
             </span>
@@ -133,6 +133,9 @@
   <section class="hotDeal_section"></section>
   <section class="keywords_section"></section>
   <footer></footer>
+  <script type="module" src="./javascripts/utils.js"></script>
+  <script type="module" src="./javascripts/slider.js"></script>
+  <script type="module" src="./javascripts/main.js"></script>
 </body>
 
 </html>
