--- a/shopping/public/stylesheets/main/main.css
+++ b/shopping/public/stylesheets/main/main.css
@@ -26,6 +26,8 @@
     width: 485px;
     height: 340px; }
     .main__banner__top .banner__right .banner__slider {
+      transition-duration: 300ms;
+      transform: translate3d(0px, 0px, 0px);
       display: flex;
       position: relative;
       top: 0px;
