--- a/shopping/public/stylesheets/sass/main/main.sass
+++ b/shopping/public/stylesheets/sass/main/main.sass
@@ -26,7 +26,8 @@
         width: 485px
         height: 340px
         .banner__slider
-
+            transition-duration: 300ms;
+            transform: translate3d(0px,0px,0px)
             display: flex
             position: relative
             top: 0px
@@ -72,3 +73,4 @@
             background-color: #ccc
         .selected
             background-color: #000
+
