--- a/shopping/public/stylesheets/style.css
+++ b/shopping/public/stylesheets/style.css
@@ -182,6 +182,8 @@ header {
     width: 485px;
     height: 340px; }
     .main__banner__top .banner__right .banner__slider {
+      transition-duration: 300ms;
+      transform: translate3d(0px, 0px, 0px);
       display: flex;
       position: relative;
       top: 0px;
