--- a/frontend/app.scss
+++ b/frontend/app.scss
@@ -1,5 +1,3 @@
-// global
-
 // reset.css
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -22,10 +20,16 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+// global used
+
 ul {
   list-style: none;
 }
 
 .container {
   margin: 0 auto;
+}
+
+.main {
+  background-color: #f3f3f3;
 }
