[자기 전 커밋] 리스트에 어떻게 이미지 5개씩 넣을건지 생각하다가 잠들면됨

--- a/raccoon-shopping-express/front/style.scss
+++ b/raccoon-shopping-express/front/style.scss
@@ -704,6 +704,7 @@ section {
             margin-top: -58px;
             background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/specials/ico_eventlist_141110_v3.png) 0 -340px no-repeat;
             opacity: 0;
+            transition: 0.4s;
           }
 
           .ico--home {
