ADD main sercion HTML
* ADD ejs main section
* ADD SCSS main section

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -63,7 +63,9 @@ input {
   border-top: 1px solid #dcdfe4;
   border-bottom: 1px solid #dcdfe4;
   margin: 10px 20px 20px 10px;
-  font-size: 16px; }
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between; }
   .nav .divideLine {
     width: 1px;
     height: 18px;
@@ -72,7 +74,7 @@ input {
   .nav__wrapper {
     display: flex;
     height: 45px;
-    justify-content: flex-start; }
+    justify-content: space-between; }
   .nav__category_box {
     padding: 5px 20px;
     width: 160px; }
@@ -86,7 +88,7 @@ input {
       color: #333;
       letter-spacing: -.03em; }
   .nav__menu__box {
-    width: 400px; }
+    width: 410px; }
     .nav__menu__box ul {
       display: grid;
       grid-template-columns: auto auto auto auto;
@@ -100,7 +102,7 @@ input {
         text-decoration: none;
         font-weight: 600; }
   .nav__hashtag__box {
-    width: 680px; }
+    width: 670px; }
     .nav__hashtag__box ul {
       display: grid;
       grid-template-columns: auto auto auto auto auto;
@@ -114,10 +116,11 @@ input {
         text-decoration: none;
         font-weight: 600; }
   .nav__mypage__box {
-    width: 500px;
+    width: 450px;
     display: flex;
     justify-content: flex-end;
-    gap: 40px; }
+    gap: 40px;
+    padding: 0 20px; }
     .nav__mypage__box .mypage__login__box {
       display: flex;
       align-items: center;
