--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -6,7 +6,6 @@
 
 .icon2 {
     background: url('/images/fe-w3-icon2.png') no-repeat;
-    background-size:130px 90px;
     display: block;
 }  
 
@@ -18,6 +17,10 @@
     &-28{
         width: 28px;
         height: 28px;
+    }
+    &-45{
+        width: 45px;
+        height: 45px;
     }
 }
 
@@ -64,8 +67,27 @@
     &-down-arrow{
         @extend .icon, .w-10, .h-10;
         background-position: -60px -60px;
-        
-        
+    }
+
+    &-prevbtn{
+        @extend .icon2, .w-23, .h-45;
+        background-position: 1px 0px;
+
+    }
+    &-nextbtn{
+        @extend .icon2, .w-23, .h-45;
+        background-position: -30px 0px;
+
+    }
+
+    &-prevbtn2{
+        @extend .icon2, .wh-45;
+        background-position: 1px -55px;
+
+    }
+    &-nextbtn2{
+        @extend .icon2, .wh-45;
+        background-position: -50px -55px;
 
     }
 }
