--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                 <img src="/images/main-logo.png" />
             </div>
 
-            <!-- <%= homeContents.contents[0].eventContent.title %> -->
+            <!-- <img src="<%= homeContents.contents[0].eventContent.imgurl %>"> -->
 
             <div class="head__search__box">
                 <input type="search" class="inp_search btn_searchbox" placeholder="상품 검색" data-gg="{lk:mo_gnb_search,tp:A}">
@@ -31,50 +31,53 @@
 
         <nav class="nav">
             <div class="nav__wrapper">
-                <div class="nav__category_box">
-                    <button type="button" class="nav__category-btn">
-                        <span class="i-category"></span>
-                        <span class="nav__category-text">카테고리</span>
-                    </button>
-                </div>
-    
-                <span class="divideLine"></div>
-                <div class="nav__menu__box">
-                    <ul class="nav__menu__list">
-                        <li>
-                            <a href="/m/hotdeal/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_hotdeal}">핫딜</a>
-                        </li>
-                        <li class="" role="presentation">
-                            <a href="/m/ranking/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_ranking}">베스트100</a>
-                        </li>
-                        <li class="" role="presentation">
-                            <a href="/m/trend/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_trend}">할인특가</a>
-                        </li>
-                        <li class="" role="presentation">
-                            <a href="/m/sale/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_sale}">기획전</a>
-                        </li>
-                    </ul>
-                </div>
-    
-                <div class="divideLine"></div>
-                <div class="nav__hashtag__box">
-                    <ul class="nav__hashtag__list">
-                        <li class="hashtag__list" role="presentation">
-                            <a href="/m/" class="hashtag__list-a" role="tab" aria-selected="true" data-gg="{lk:mo_gnb_section_home}">#수능 선물</a>
-                        </li>
-                        <li class="hashtag__list">
-                            <a href="/m/hotdeal/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_hotdeal}">#김치냉장고</a>
-                        </li>
-                        <li class="hashtag__list" role="presentation">
-                            <a href="/m/ranking/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_ranking}">#복합 가습기</a>
-                        </li>
-                        <li class="hashtag__list" role="presentation">
-                            <a href="/m/trend/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_trend}">#구스다운</a>
-                        </li>
-                        <li class="hashtag__list" role="presentation">
-                            <a href="/m/sale/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_sale}">#온수매트</a>
-                        </li>
-                    </ul>
+                <div class="temp">
+
+                    <div class="nav__category_box">
+                        <button type="button" class="nav__category-btn">
+                            <span class="i-category"></span>
+                            <span class="nav__category-text">카테고리</span>
+                        </button>
+                    </div>
+        
+                    <span class="divideLine"></div>
+                    <div class="nav__menu__box">
+                        <ul class="nav__menu__list">
+                            <li>
+                                <a href="/m/hotdeal/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_hotdeal}">핫딜</a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="/m/ranking/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_ranking}">베스트100</a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="/m/trend/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_trend}">할인특가</a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="/m/sale/" class="menu__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_sale}">기획전</a>
+                            </li>
+                        </ul>
+                    </div>
+        
+                    <div class="divideLine"></div>
+                    <div class="nav__hashtag__box">
+                        <ul class="nav__hashtag__list">
+                            <li class="hashtag__list" role="presentation">
+                                <a href="/m/" class="hashtag__list-a" role="tab" aria-selected="true" data-gg="{lk:mo_gnb_section_home}">#수능 선물</a>
+                            </li>
+                            <li class="hashtag__list">
+                                <a href="/m/hotdeal/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_hotdeal}">#김치냉장고</a>
+                            </li>
+                            <li class="hashtag__list" role="presentation">
+                                <a href="/m/ranking/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_ranking}">#복합 가습기</a>
+                            </li>
+                            <li class="hashtag__list" role="presentation">
+                                <a href="/m/trend/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_trend}">#구스다운</a>
+                            </li>
+                            <li class="hashtag__list" role="presentation">
+                                <a href="/m/sale/" class="hashtag__list-a" role="tab" aria-selected="false" data-gg="{lk:mo_gnb_section_sale}">#온수매트</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
     
                 <div class="nav__mypage__box">
@@ -93,7 +96,185 @@
 
     </header>
     <main>
+        <section class="best">
+            <div class="best__zone">
+
+                <div class="best__box_first">
+                    <img src="<%= planningEvent.mileageList[2].imgurl %>">
+                </div>
+                <div class="best__box_second">
+                    <div class="best__button prev">
+                        <span class="i-prevbtn"></span>
+                    </div>
+                    <img src="<%= planningEvent.mileageList[2].imgurl %>">
+                    <div class="best__button next">
+                        <span class="i-nextbtn"></span>
+                    </div>
+                    <div class="best__box__bar">
+                        <button class="best__box__bar-first">----</button>
+                        <button class="best__box__bar-second">----</button>
+                        <button class="best__box__bar-third">----</button>
+                    </div>
+    
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="item">
+            <div class="item__zone">
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+            </div>    
+        </section>
+        <div class="more__item-btn">
+            <button type="button">더보기(1/276건)</button>
+        </div>
+        <div class="theme__title"> 지금뜨는 테마 카테고리</div>
+        <section class="item theme">
+            <div class="item__zone theme__zone">
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="item__box">
+                    <div class="item__box-img">
+                        <img src="/images/itemImg.jpeg">
+                    </div>
+                    <div class="item__box-title">
+                        <span><%= homeContents.contents[0].eventContent.subtitle %></span>
+                    </div>
+                    <div class="item__box-subtitle">
+                        <span><%= homeContents.contents[0].eventContent.title %></span>
+    
+                    </div>
+                    <div class="item__box-label">테마</div>
+                </div>
+                <div class="prev-btn">
+                    <span class="i-prevbtn2"></span>
+                </div>
+                <div class="next-btn">
+                    <span class="i-nextbtn2"></span>
+                </div>
+            </div>    
+        </section>
+
         
+
+           
+
+            </div>
+        </section>
     </main>
 
     
