동적으로 이미지를 불러오기 때문에 불필요한 태그 삭제
loadItem.js를 통해 템플릿 방식으로 이미지를 불러온다.

--- a/views/parts/sectionTop.ejs
+++ b/views/parts/sectionTop.ejs
@@ -8,15 +8,7 @@
         <button><i class="fas fa-angle-left"></i></button>
       </div>
       <div class="main-top-slide-imgs">
-        <a class="slide-img" href="#">
-          <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
-        </a>
-        <a class="slide-img" href="#">
-          <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
-        </a>
-        <a class="slide-img" href="#">
-          <img src="/img/main-top-2-1.png" alt="main-top-first-img" />
-        </a>
+        <!-- 이미지를 동적으로 불러온다 (LoadItem.js 파일 참조)-->
       </div>
       <div class="arrow-btn arrow-btn-right">
         <button><i class="fas fa-angle-right"></i></button>
