--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
     ></script>
-    <script src="/js/main.js" defer></script>
+    <script type="module" src="/js/main.js" defer></script>
     <title>FE-3-shoppingHow</title>
   </head>
   <body>
